--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-test",
+  "name": "esi-hub",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start" : "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -20,6 +20,11 @@
     "mongoose": "^6.2.3"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15"
   }
 }
