--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "npm": "^8.5.3"
   }
 }
