--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,11 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "joi": "^17.6.0",
+    "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
