--- a/server/public/package.json
+++ b/server/public/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.0.0",
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
