--- a/server/public/package.json
+++ b/server/public/package.json
@@ -14,9 +14,11 @@
     "@mui/material": "^5.6.3",
     "axios": "^0.27.2",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
     "npm": "^8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "socket.io-client": "^4.5.1",
